--- a/src/js/package.json
+++ b/src/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xsldoc-builder",
-  "version": "1.0.0",
-  "description": "xsldoc builder for a Javascript file and a CSS file",
+  "version": "0.1.0",
+  "description": "xsldoc build environment with Node.js",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
