--- a/res/js/package.json
+++ b/res/js/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "xsldoc-builder",
+  "name": "xsldoc",
   "version": "0.1.0",
-  "description": "xsldoc build environment with Node.js",
+  "description": "xsldoc.js build environment with Node.js",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "sass:build": "node-sass ../../src/scss/xsldoc.scss ../../dist/xsldoc.css",
-    "sass:watch": "node-sass --watch ../../src/scss/xsldoc.scss ../../dist/xsldoc.css",
+    "sass:build": "sass ../../src/scss/xsldoc.scss ../../dist/xsldoc.css",
+    "sass:watch": "sass --watch ../../src/scss/xsldoc.scss ../../dist/xsldoc.css",
     "js:build": "browserify index.js --standalone xsldoc -o ../../dist/xsldoc.js && cd ../../dist && uglifyjs xsldoc.js --compress --mangle -o xsldoc.min.js --source-map url=xsldoc.min.js.map"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "keywords": [
     "xsldoc",
-    "api",
+    "doc",
     "xsl",
     "xslet"
   ],
@@ -22,12 +25,9 @@
   "author": "Takayuki Sato",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^16.5.0",
-    "eslint": "^6.4.0",
-    "node-sass": "^4.12.0",
-    "uglify-js": "^3.6.0"
-  },
-  "dependencies": {
-    "@xslet/platform": "^0.2.1"
+    "browserify": "^17.0.0",
+    "eslint": "^8.8.0",
+    "sass": "^1.49.7",
+    "uglify-js": "^3.15.0"
   }
 }
